# mcp-servers

./: .gitignore  README.md
.claude/: claude_desktop_config.json
.cursor/rules/: git-commit-guidelines.mdc  python.mdc  python_commenting.mdc  python_formatting.mdc  python_security.mdc  python_security.mpc  python_testing.mdc  terraform.mdc
lang-chain-mcp-adapters/: .env_sample  README.md  langchain_client.py  main.py  pyproject.toml
lang-chain-mcp-adapters/servers/: math_server.py  pii_server.py  psychologist_server.py  weather_server.py
shellserver/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
shellserver/.claude/: claude_desktop_config.json
